--- a/config/libri/asr_example.yaml
+++ b/config/libri/asr_example.yaml
@@ -1,9 +1,9 @@
 data:
   corpus:                                 
-    name: 'Librispeech'                   # Specify corpus
-    path: 'data/LibriSpeech'          # Path to raw LibriSpeech dataset
-    train_split: ['train-clean-100','train-clean-360'] # Name of data splits to be used as training set
-    dev_split: ['dev-clean']              # Name of data splits to be used as validation set
+    name: 'Dlhlp'                   # Specify corpus
+    path: 'data/DLHLP'          # Path to raw LibriSpeech dataset
+    train_split: ['train'] # Name of data splits to be used as training set
+    dev_split: ['dev']              # Name of data splits to be used as validation set
     bucketing: True                       # Enable/Disable bucketing 
     batch_size: 16
   audio:                                  # Attributes of audio feature
@@ -16,12 +16,12 @@ data:
     delta_order: 2                        # 0: do nothing, 1: add delta, 2: add delta and accelerate
     delta_window_size: 2
   text:
-    mode: 'subword'                       # 'character'/'word'/'subword'
-    vocab_file: 'tests/sample_data/subword-16k.model'
+    mode: 'character'                       # 'character'/'word'/'subword'
+    vocab_file: 'bopomo_vocab_file'
 
 hparas:                                   # Experiment hyper-parameters
-  valid_step: 5000
-  max_step: 1000001
+  valid_step: 500
+  max_step: 1200001
   tf_start: 1.0
   tf_end: 1.0
   tf_step: 500000
@@ -38,11 +38,11 @@ model:                                    # Model architecture
     # vgg: True                             # 4x reduction on time feature extraction
     module: 'LSTM'                        # 'LSTM'/'GRU'/'Transformer'
     bidirection: True
-    dim: [512,512,512,512,512]
-    dropout: [0,0,0,0,0]
-    layer_norm: [False,False,False,False,False]
-    proj: [True,True,True,True,True]      # Linear projection + Tanh after each rnn layer
-    sample_rate: [1,1,1,1,1]
+    dim: [512,512]
+    dropout: [0,0]
+    layer_norm: [False,False]
+    proj: [True,True]      # Linear projection + Tanh after each rnn layer
+    sample_rate: [1,1]
     sample_style: 'drop'                  # 'drop'/'concat'
   attention:
     mode: 'loc'                           # 'dot'/'loc'
