--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-tqdm
-pandas
+tqdm~=4.50.2
+pandas~=0.25.3
 future
-joblib
-pyyaml
+joblib~=0.17.0
+pyyaml~=5.3.1
 sentencepiece
 tb-nightly
 torch>=1.2.0
-torchaudio
-matplotlib
+torchaudio~=0.7.0
+matplotlib~=3.1.3
+
+numpy~=1.19.3
+editdistance~=0.5.3
